--- a/examples/quantization/quant_aware_train/quant_aware_train_linear_quant.yaml
+++ b/examples/quantization/quant_aware_train/quant_aware_train_linear_quant.yaml
@@ -9,7 +9,8 @@
 #
 # Here's an example run for fine-tuning the ResNet-18 model from torchvision:
 #
-# python compress_classifier.py -a resnet18 -p 50 -b 256 ~/datasets/imagenet --epochs 10 --compress=../quantization/quant_aware_train/quant_aware_train_linear_quant.yaml --pretrained -j 22 --lr 0.0001 --vs 0 --gpu 0
+# python compress_classifier.py -a resnet18 -p 50 -b 256 ~\datasets\imagenet --epochs 10 --compress=..\quantization\quant_aware_train\quant_aware_train_linear_quant.yaml --pretrained -j 22 --lr 0.0001 --vs 0 --gpu 0
+# python compress_classifier.py -a resnet10_cifar -p 100 -b 32 D:\playground\distiller\examples\datasets\cifar10_resize_226x226 --epochs 10 --compress=..\quantization\quant_aware_train\quant_aware_train_linear_quant.yaml --pretrained -j 22 --lr 0.0001 --vs 0 --gpu 0
 #
 # After 6 epochs we get:
 #
@@ -30,9 +31,9 @@ quantizers:
     class: QuantAwareTrainRangeLinearQuantizer
     bits_activations: 8
     bits_weights: 8
-    mode: 'ASYMMETRIC_UNSIGNED'  # Can try "SYMMETRIC" as well
+    mode: 'ASYMMETRIC_SIGNED'  # Can try "SYMMETRIC" as well
     ema_decay: 0.999   # Decay value for exponential moving average tracking of activation ranges
-    per_channel_wts: True
+    per_channel_wts: False
 
 policies:
     - quantizer:
