--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-torch==1.1.0
+torch>=1.1.0
 numpy>=1.16
-torchvision==0.3.0
+torchvision>=0.3.0
 scipy>=1.3.0
 gitpython==2.1.11
 torchnet==0.0.4
-tensorflow~=1.14
+tensorflow>=1.14
 pydot==1.4.1
 tabulate==0.8.3
 pandas>=0.22.0
