--- a/examples/quantization/quant_aware_train/quant_aware_train_linear_quant.yaml
+++ b/examples/quantization/quant_aware_train/quant_aware_train_linear_quant.yaml
@@ -31,7 +31,7 @@ quantizers:
     class: QuantAwareTrainRangeLinearQuantizer
     bits_activations: 8
     bits_weights: 8
-    mode: 'ASYMMETRIC_SIGNED'  # Can try "SYMMETRIC" as well
+    mode: 'SYMMETRIC'  # Can try "SYMMETRIC" as well
     ema_decay: 0.999   # Decay value for exponential moving average tracking of activation ranges
     per_channel_wts: False
 
